# FirstPracticalWorkFormalLanguagesAndBroadcasts

./: .travis.yml  CMakeLists.txt  README.md
src/: FiniteStateMachine.cpp  FiniteStateMachine.h  main.cpp
test/: ClassForTest.cpp  ClassForTest.h  Test.cpp
